--- a/mockups/sign-in-and-out.html
+++ b/mockups/sign-in-and-out.html
@@ -368,9 +368,9 @@
                     <i class="fas fa-user-plus mr-2"></i>Quick Patient Registration
                 </h3>
                 <p class="text-gray-600 mb-4">Register a new patient directly from check-in if they arrive without an existing record.</p>
-                <button id="quickRegisterBtn" class="w-full btn-primary text-white py-3 rounded-lg hover:opacity-90">
+                <a href="patient_registration.html" id="quickRegisterBtn" class="p-8 w-full btn-primary text-white py-3 rounded-lg hover:opacity-90">
                     <i class="fas fa-user-plus mr-2"></i>Register New Patient
-                </button>
+                </a>
             </div>
             
             <div class="bg-white p-6 rounded shadow-sm">
